--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
+    "papaparse": "^5.4.1",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -62,6 +63,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-copy-to-clipboard": "^5.0.7",
+    "@types/papaparse": "^5.3.14",
     "genkit-cli": "^1.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
