--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "^1.14.1",
-    "@genkit-ai/next": "^1.14.1",
+    "@genkit-ai/firebase": "1.14.1",
+    "@genkit-ai/googleai": "1.14.1",
+    "@genkit-ai/next": "1.14.1",
     "@hookform/resolvers": "^4.1.3",
+    "@opentelemetry/exporter-jaeger": "^1.27.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -45,7 +47,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
-    "genkit": "^1.14.1",
+    "genkit": "1.14.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "node-fetch": "^3.3.2",
@@ -66,7 +68,7 @@
     "@types/react-dom": "^18",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/papaparse": "^5.3.14",
-    "genkit-cli": "^1.14.1",
+    "genkit-cli": "1.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
