--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/firebase": "^1.14.1",
-    "@genkit-ai/googleai": "^1.14.1",
-    "@genkit-ai/next": "^1.14.1",
+    "@genkit-ai/firebase": "1.14.1",
+    "@genkit-ai/googleai": "1.14.1",
+    "@genkit-ai/next": "1.14.1",
     "@hookform/resolvers": "^4.1.3",
     "@opentelemetry/exporter-jaeger": "^1.27.0",
     "@opentelemetry/winston-transport": "^0.8.0",
@@ -47,7 +47,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
-    "genkit": "^1.14.1",
+    "genkit": "1.14.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "node-fetch": "^3.3.2",
