--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit",
-    "postinstall": "patch-package"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@genkit-ai/firebase": "1.14.1",
     "@genkit-ai/googleai": "1.14.1",
     "@genkit-ai/next": "1.14.1",
     "@hookform/resolvers": "^4.1.3",
-    "@opentelemetry/winston-transport": "0.8.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -52,7 +50,6 @@
     "next": "15.3.3",
     "node-fetch": "^3.3.2",
     "papaparse": "^5.4.1",
-    "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-day-picker": "^8.10.1",
