--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@genkit-ai/firebase": "1.14.1",
-    "@genkit-ai/googleai": "1.14.1",
-    "@genkit-ai/next": "1.14.1",
+    "@genkit-ai/firebase": "1.15.5",
+    "@genkit-ai/googleai": "1.15.5",
+    "@genkit-ai/next": "1.15.5",
     "@hookform/resolvers": "^4.1.3",
     "@opentelemetry/exporter-jaeger": "^1.26.0",
     "@opentelemetry/winston-transport": "^0.10.0",
@@ -48,7 +48,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
-    "genkit": "1.14.1",
+    "genkit": "1.15.5",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "node-fetch": "^3.3.2",
@@ -70,6 +70,7 @@
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18",
     "genkit-cli": "1.14.1",
+    "null-loader": "^4.0.1",
     "patch-package": "^8.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
