--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit",
-    "postinstall": "patch-package"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@genkit-ai/firebase": "1.15.5",
@@ -69,7 +68,6 @@
     "@types/react-dom": "^18",
     "genkit-cli": "1.14.1",
     "null-loader": "^4.0.1",
-    "patch-package": "^8.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
