--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "1.15.5",
+    "handlebars": "^4.7.8",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "node-fetch": "^3.3.2",
