--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,7 +1,20 @@
 # Settings to manage and configure a Firebase App Hosting backend.
 # https://firebase.google.com/docs/app-hosting/configure
 
+build:
+  command: npm run build
+  dir: .
+
 runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
   maxInstances: 1
+  env:
+    NEXT_PUBLIC_FIREBASE_API_KEY: "<api-key>"
+    NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: "<auth-domain>"
+    NEXT_PUBLIC_FIREBASE_PROJECT_ID: "<project-id>"
+    NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: "<bucket>"
+    NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: "<sender-id>"
+    NEXT_PUBLIC_FIREBASE_APP_ID: "<app-id>"
+    NEXT_PUBLIC_MICROSOFT_TENANT_ID: "<tenant-id>"
+    FIREBASE_SERVICE_ACCOUNT: "<json-service-account>"
