--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "@types/react": "^18",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18",
+    "eslint": "^9.33.0",
+    "eslint-config-next": "^15.4.6",
     "genkit-cli": "1.14.1",
     "null-loader": "^4.0.1",
     "postcss": "^8",
