--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,9 +1,12 @@
 # Settings to manage and configure a Firebase App Hosting backend.
 # https://firebase.google.com/docs/app-hosting/configure
 
-env:
-  NEXT_PUBLIC_MICROSOFT_TENANT_ID: "your-tenant-id"
+# Defines the commands that are used to build the application.
+build:
+  command: npm run build
+  dir: .
 
+# Defines the settings for the server that runs the application.
 runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
