--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -5,9 +5,15 @@
 build:
   command: npm run build
   dir: .
+  env:
+    - name: NEXT_PUBLIC_MICROSOFT_TENANT_ID
+      value: "6868b6f5-caf5-456b-bfd0-fe19c5bd00de"
 
 # Defines the settings for the server that runs the application.
 runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
   maxInstances: 1
+  env:
+    - name: NEXT_PUBLIC_MICROSOFT_TENANT_ID
+      value: "6868b6f5-caf5-456b-bfd0-fe19c5bd00de"
