--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -5,15 +5,50 @@
 build:
   command: npm run build
   dir: .
+  # Defines the environment variables that are available during the build process.
   env:
+    - name: NEXT_PUBLIC_ERPNEXT_URL
+      value: ""
+    - name: NEXT_PUBLIC_ERPNEXT_API_KEY
+      value: ""
+    - name: NEXT_PUBLIC_ERPNEXT_API_SECRET
+      value: ""
+    - name: NEXT_PUBLIC_FIREBASE_API_KEY
+      value: "AIzaSyBnLCLDNhL64QG6kagfwSAXyCOdB-H7ENA"
+    - name: NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
+      value: "listingflow-sp4tf.firebaseapp.com"
+    - name: NEXT_PUBLIC_FIREBASE_PROJECT_ID
+      value: "listingflow-sp4tf"
+    - name: NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
+      value: "listingflow-sp4tf.appspot.com"
+    - name: NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
+      value: "935922706940"
+    - name: NEXT_PUBLIC_FIREBASE_APP_ID
+      value: "1:935922706940:web:2fc04bfc3e3240cfc82a79"
     - name: NEXT_PUBLIC_MICROSOFT_TENANT_ID
       value: "6868b6f5-caf5-456b-bfd0-fe19c5bd00de"
 
 # Defines the settings for the server that runs the application.
 runConfig:
-  # Increase this value if you'd like to automatically spin up
-  # more instances in response to increased traffic.
-  maxInstances: 1
+  # Defines the environment variables that are available at runtime.
   env:
-    - name: NEXT_PUBLIC_MICROSOFT_TENANT_ID
-      value: "6868b6f5-caf5-456b-bfd0-fe19c5bd00de"
+    - name: EBAY_ENV
+      value: "SANDBOX"
+    - name: EBAY_CLIENT_ID
+      value: ""
+    - name: EBAY_CLIENT_SECRET
+      value: ""
+    - name: EBAY_RU_NAME
+      value: ""
+    - name: EBAY_REFRESH_TOKEN
+      value: ""
+    - name: EBAY_MARKETPLACE_ID
+      value: "EBAY_DE"
+    - name: EAN_SEARCH_API_TOKEN
+      value: "your_token_here"
+    - name: ERPNEXT_URL
+      value: "https://your-erp.rembayer.info"
+    - name: ERPNEXT_API_KEY
+      value: "your_api_key"
+    - name: ERPNEXT_API_SECRET
+      value: "your_api_secret"
