--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_ERPNEXT_URL=https://your-erp.example.com
-ERPNEXT_API_KEY=your_api_key
-ERPNEXT_API_SECRET=your_api_secret
+NEXT_PUBLIC_ERPNEXT_URL=https://erp.rembayer.info
+ERPNEXT_API_KEY=4219f2a59843e43
+ERPNEXT_API_SECRET=a269d24c36c37b4
