stai asa, eu n-am nicio parola?

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -24,3 +24,8 @@ env:
     availability:
       - BUILD
       - RUNTIME
+  - variable: APP_PASSWORD
+    secret: APP_PASSWORD
+    availability:
+      - BUILD
+      - RUNTIME
