--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^10.12.3",
+    "firebase-admin": "^12.2.0",
     "genkit": "1.15.5",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
