--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "sync-ebay-cats": "tsx scripts/sync-ebay-categories.de.ts"
   },
   "dependencies": {
     "@genkit-ai/firebase": "1.15.5",
@@ -59,6 +60,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "undici": "^6.19.2",
     "zod": "^3.24.2",
     "zustand": "^4.5.4"
   },
