--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -27,7 +27,7 @@ env:
     availability:
       - RUNTIME
   - variable: NEXT_PUBLIC_ENV
-    value: 'prod'
+    value: 'dev'
     availability:
       - BUILD
       - RUNTIME
