--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,18 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node / Next
+node_modules/
+.next/
+*.log
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Env / local
 .env
+.env.*
+firebase-debug.log
 
-# vercel
-.vercel
+# Firebase Studio / App Hosting
+.firebase/
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-# studio
-.studio/
+# Firebase Functions (Next SSR în Functions)
+functions/node_modules/
+functions/.next/
+functions/.cache/
+functions/*.log
