--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -34,8 +34,10 @@ env:
   - variable: SHOPIFY_STORE_URL
     secret: SHOPIFY_STORE_URL
     availability:
+      - BUILD
       - RUNTIME
   - variable: SHOPIFY_ADMIN_ACCESS_TOKEN
     secret: SHOPIFY_ADMIN_ACCESS_TOKEN
     availability:
+      - BUILD
       - RUNTIME
