https://shopify.dev/docs/apps/build/authentication-authorization/access-

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -12,6 +12,7 @@ env:
   - variable: ERPNEXT_BASE_URL
     value: "https://erp.rembayer.info"
     availability:
+      - BUILD
       - RUNTIME
   - variable: NEXT_PUBLIC_ERPNEXT_BASE_URL
     value: "https://erp.rembayer.info"
@@ -21,10 +22,12 @@ env:
   - variable: ERPNEXT_API_KEY
     secret: ERPNEXT_API_KEY
     availability:
+      - BUILD
       - RUNTIME
   - variable: ERPNEXT_API_SECRET
     secret: ERPNEXT_API_SECRET
     availability:
+      - BUILD
       - RUNTIME
   - variable: NEXT_PUBLIC_ENV
     value: 'dev'
